[tool.poetry]
name = "isamples_metadata_tools"
version = "0.1.0"
description = "Tools for working with isamples metadata schema, in additional to linkml and pylode."
authors = ["datadavev <605409+datadavev@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
rdflib = "^6.1.1"
click = "^8.0.1"
pyLODE = "<3.0"
#mkdocs-gitbook = {git = "https://gitlab.com/lramage/mkdocs-gitbook-theme.git"}
quarto = "^0.1.0"
linkml = "^1.3.10"


[tool.poetry.dev-dependencies]
ipykernel = "^6.9.1"

[tool.poetry.group.dev.dependencies]
mkdocs-mermaid2-plugin = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
