[tool.poetry]
name = "isamples_examples"
version = "0.2.0"
description = "Script for collecting example records from iSamples sources."
authors = ["datadavev <datadavev@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
isample = "script.isample:main"
geome-required = "script.geom_required:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
